# employee-hours-optimizer

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  main.py  pyproject.toml
