[project]
name = "employee-hours-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=13.0.0",
    "gurobipy-pandas>=1.2.2",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pandas-stubs>=2.3.3.251201",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "PD"]

ignore = ["E712"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
check = "ruff check . --fix && ruff format ."
